Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -904,6 +904,8 @@ The static variable declared inside a class with static keyword shares a single 
 
                    Fig- output of static properties  
 
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_properties/static_properties.sv  
+**Github logfile link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_properties/static_properties.log  
 
 ## Static Methods
 
@@ -947,7 +949,8 @@ Both static methods and static members in a class can be accessed without creati
  
                     Fig-    output of static method  
 **Github Lab link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_methods/static_method.sv  
-**Github Logfile Link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_methods/static_method.log
+**Github Logfile Link**: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/static/static_methods/static_method.log  
+
 # Inheritance 
 
 Inheritance is a mechanism which allows child class to inherit the properties of base-class. Objects of child class will have access to attributes and methods of parent class. If child class inherits parent class, then parent class is called **super-class** and child class is called **subclass**. 
@@ -1004,6 +1007,9 @@ In the module we are creating handle 'b1'only for the child class B and we are i
 ![inh_output_new-Page-3](https://user-images.githubusercontent.com/110398433/191522557-3901a30b-ec83-4259-ad18-e6239d51fb01.jpg)
 
           Fig-    output of inheritance  
+
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/inheritance/inh.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/inheritance/inh_op.log  
 
 # Polymorphism  
 
@@ -1069,6 +1075,9 @@ In this code we can see that the methods of both parent class and child classes 
 
           Fig-  output of polymorphism  
 
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/polymorphism/poly.sv    
+**Github logfile link**https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/polymorphism/poly_op.log  
+
 # Abstract/Virtual class
 
 Abstract class is a virtual class which cannot be instantiated directly in the program(in other words an object of a virtual/abstract class cannot be created). If you try doing so it will throw compile time error. They will be used as a base class to inherit any no of classes. We generally use abstract class to define a prototype in advance, that means an abstract class provides a template for a set of derived classes. So you know you have a basic set of methods/properties that already exist, that makes it simpler for you to focus on the new intent for which you are creating this derived class.
@@ -1111,6 +1120,9 @@ In the module we are creating handle 'b1'only for the child class B and we are i
 ![abstract-output new](https://user-images.githubusercontent.com/110398433/191521079-4943574c-7576-445f-b785-e7782ce52b8a.png)
 
           Fig- output of abstract  
+
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/abstraction/abstract_class/abstract.sv  
+**Github logfie link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/abstraction/abstract_class/abstract_op.log  
 
 ## Pure virtual method
 
@@ -1158,7 +1170,10 @@ In the code we can see that initially in a virtual class we will be declaring tw
 
 ![pvf_new](https://user-images.githubusercontent.com/110398433/191534008-9c6270c5-88ee-4f1e-8ddd-be2978782f74.png)
 
-          Fig-  output of pure virtual class
+          Fig-  output of pure virtual class  
+
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/abstraction/pure_virtual_function/pvf.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/abstraction/pure_virtual_function/pvf_op.log  
 
 # Encapsulation
 
@@ -1223,6 +1238,9 @@ In the code we can see that the local variable c,d declared inside the class is 
 
           Fig-   output of local encapsulation  
 
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/encapsulation/local/local.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/encapsulation/local/encap_op.log  
+
 ### Errors expected if we access local variable by child class
 
 **code snippet**:-
@@ -1278,7 +1296,10 @@ In the code we can see that the local variable c,d declared inside the class is 
 
 ![local_errors_new drawio](https://user-images.githubusercontent.com/110398433/191592232-6b14be7f-02b7-42e3-b23c-4e777a01aa45.png)
 
-          Fig- showing error
+          Fig- showing error  
+
+**Github lab link**:
+**Github logfile link**:
 
 ## Protected
 
@@ -1338,6 +1359,9 @@ In the code we can see that the protected variable c,d declared inside the class
 
           Fig-    output of protected encapsulation  
 
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/encapsulation/protected/prot.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/encapsulation/protected/prot_op.log  
+
 ## Public
 
 By default if we does not define any attributes with keywords **'local'** and **'protected'**, then by default it is **'public'**. It provides full access to all attributes and methods to child classes.
@@ -1393,4 +1417,7 @@ By default if we does not define any attributes with keywords **'local'** and **
 ![pub_new](https://user-images.githubusercontent.com/110398433/191605847-6dad8ba4-d9ed-4589-9127-4f90e9cc2b18.png)
 
 
-          Fig-   output of public encapsulation
+          Fig-   output of public encapsulation  
+
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/encapsulation/public/pub.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/encapsulation/public/pub_op.log  
