Updated 15.Classes and oops (markdown)

--- a/15.Classes-and-oops.md
+++ b/15.Classes-and-oops.md
@@ -853,7 +853,9 @@ To override a method means that given a base class with a method, we can define 
 
 ![Untitled Diagram drawio (24)](https://user-images.githubusercontent.com/110509375/191424728-bffbec08-ebde-45c7-ac42-a6225dda6d6f.png)
   
-                        Fig-   output of virtual task
+                        Fig-   output of overriding class member  
+**Github lab link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_over_riding/over_riding_class.sv  
+**Github logfile link**:https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_Team_BJT/classes/class_over_riding/over_riding_class.log  
 
 # Static Properties and Methods
 Class members can be created with the keyword static. class members with the keyword static are called as static class members. the class can have static properties and static methods (functions and tasks). a single copy of static variables is shared across multiple instances.
@@ -1297,9 +1299,6 @@ In the code we can see that the local variable c,d declared inside the class is 
 ![local_errors_new drawio](https://user-images.githubusercontent.com/110398433/191592232-6b14be7f-02b7-42e3-b23c-4e777a01aa45.png)
 
           Fig- showing error  
-
-**Github lab link**:
-**Github logfile link**:
 
 ## Protected
 
