--- a/13.Interface.md
+++ b/13.Interface.md
@@ -224,6 +224,11 @@ Below figure shows the output of counter with parameterized interface.
 
 ****Github lab output link****: https://github.com/muneeb-mbytes/SystemVerilog_Course/blob/b7_team_kachori/interface/parameter_interface/code.log
 
+
+**The parameter value can be updated in two ways**
+
+* Pass constant or define based value
+* Use the ‘defparam’ keyword**
 ---
 
 # Modport:
